...
 */
@Suppress("MagicNumber")
object FakeLibrary {
    val sites = listOf(
        Site("mangaplus.shueisha.co.jp", "MANGA Plus", "M+"),
        Site("mangadex.org", "MangaDex", "MD"),
        Site("mangafire.to", "mangafire", "MF")
    )

    val settingsSummary = SettingsSummary(
        blockedThisWeek = 1284,
        activeFilterLists = 4,
        hiddenSeriesLocked = true,
...
